--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "json-to-csv": "^1.0.0",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.3.1",
+    "q": "^1.5.1",
     "serve-favicon": "~2.4.2"
   }
 }
